# platform-cli

./: EXECUTION_PLAN.md  LICENSE  README.md  cli-repository-scaffolding.md  governance_platform_plan.md  pyproject.toml
platform_cli/: main.py
platform_cli/client/: api_client.py
platform_cli/commands/: artifact.py  capability.py  diagnostics.py  execution.py  intent.py  plan.py  registry.py
platform_cli/config/: loader.py
platform_cli/models/: artifact.py  execution.py
platform_cli/utils/: errors.py
src/platform_cli/: __init__.py  main.py
src/platform_cli/client/: api_client.py  auth.py  endpoints.py
src/platform_cli/commands/: __init__.py  artifact.py  auth.py  capability.py  common.py  diagnostics.py  execution.py  intent.py  plan.py  registry.py
src/platform_cli/config/: config.py  loader.py
src/platform_cli/models/: intent.py  plan.py
src/platform_cli/services/: __init__.py  platform_service.py
src/platform_cli/utils/: errors.py  formatting.py  output.py
tests/: test_api_client.py  test_auth_commands.py  test_cli.py  test_cli_commands.py  test_config_loader.py  test_intent_commands.py  test_plan_commands.py
